# worktrack

./: .dockerignore  .gitignore  .travis  .travis.yml  Dockerfile  Dockerfile_run  Makefile  README.md  bench.sh  config.ini.template  deploy.sh  index.html  resources.txt  routes.ini  run_e2e_tests.sh  server.c  todo.txt
clogger/: Makefile  logger.c  logger.h
src/: cleanup.c  compensation_entry_t.h  compensation_repository.c  compensation_repository.h  config_t.h  dashboard_controller.c  dashboard_controller.h  db_utils.c  db_utils.h  error_codes.h  init.c  main.c  parse_config.c  parse_config.h  request.h  response.h  route.h  router.c  router.h  routes.ini  routes_parser.c  routes_parser.h  server.c  server.h  time_controller.c  time_controller.h  time_entry_t.h  time_repository.c  time_repository.h  time_service.c  time_service.h
test/: CMakeLists.txt  Makefile  README.md  test_db_utils.c  test_time_service.c
